# visual_servo_perception

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/perception_setup/lib/perception_setup/: brick_detector.py  camera_driver.py  feature_detection.py
install/perception_setup/share/ament_index/resource_index/package_run_dependencies/: perception_setup
install/perception_setup/share/perception_setup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/perception_setup/share/perception_setup/cmake/: perception_setupConfig.cmake
log/: latest_build
perception_setup/: CMakeLists.txt  package.xml  visual_servo.txt
perception_setup/config/: ibvs_params.yaml
perception_setup/launch/: Hardware.launch.py  Sim.launch.py  visual_servo_launch.py
perception_setup/perception_setup/: aruco_homography.py  aruco_test.py  bricks_homography.py  bricks_homography_irl.py  camer_speed_test.py  camera_driver.py  data_logger.py  depth_estimation.py  feature_detection.py  feature_detection_bricks.py  feature_detection_fisheye.py  feature_detection_fisheye_irl.py  grasp_shifting_node.py  grasp_shifting_node_irl.py  ground_truth.py  joint_plotter.py  mock_vel.py  plot_pose.py  plot_results.py  pose_validation_logger.py  target_generator.py  target_generator_irl.py  velocity_smoother.py  visualize_target.py  visualizer.py
perception_setup/src/: controller_trial.cpp  controller_trial_irl.cpp  pose_commander.cpp  visp_2  visp_ibvs_controller.cpp  z_value.cpp
src/perception_setup/: CMakeLists.txt  package.xml
src/perception_setup/perception_setup/: .gitignore  camera_driver.py  depth_estimation.py  feature_detection.py  feature_detection_minimal.py
